--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "angular": "^1.4.0",
+    "lodash": "^3.10.1",
     "normalize.css": "^3.0.3"
   },
   "devDependencies": {
