--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "autoprefixer": "^6.2.3",
     "clean-webpack-plugin": "^0.1.5",
     "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^0.9.1",
+    "extract-text-webpack-plugin": "^1.0.0",
     "html-webpack-plugin": "^1.7.0",
     "less": "^2.5.3",
     "less-loader": "^2.2.2",
@@ -40,6 +40,7 @@
     "tslint-loader": "^2.1.0",
     "typescript": "^1.7.3",
     "webpack": "^1.9.11",
-    "webpack-dev-server": "^1.9.0"
+    "webpack-dev-server": "^1.9.0",
+    "webpack-sources": "^0.1.0"
   }
 }
