--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "angular": "^1.4.0",
-    "lodash": "^3.10.1",
+    "lodash": "^4.0.0",
     "normalize.css": "^3.0.3"
   },
   "devDependencies": {
@@ -25,7 +25,7 @@
     "autoprefixer": "^6.2.3",
     "clean-webpack-plugin": "^0.1.5",
     "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^1.7.0",
     "ng-annotate-loader": "0.0.10",
     "node-sass": "^3.4.2",
@@ -38,7 +38,6 @@
     "tslint-loader": "^2.1.0",
     "typescript": "^1.7.3",
     "webpack": "^1.9.11",
-    "webpack-dev-server": "^1.9.0",
-    "webpack-sources": "^0.1.0"
+    "webpack-dev-server": "^1.9.0"
   }
 }
