--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "sourceMap": true
+    "module": "commonjs",
+    "target": "es5"
   },
-  "files": [
-    "./typings/tsd.d.ts"
+  "exclude": [
+    "node_modules",
+    "typings/main",
+    "typings/main.d.ts"
   ]
 }
