--- a/package.json
+++ b/package.json
@@ -16,28 +16,28 @@
     "url": "https://github.com/SenHeng/angular-typescript-webpack/issues"
   },
   "dependencies": {
-    "angular": "^1.4.0",
-    "angular-ui-router": "^0.2.15",
+    "angular": "^1.6.0",
+    "angular-ui-router": "next",
     "lodash": "^4.0.0",
-    "normalize.css": "^3.0.3"
+    "normalize.css": "^5.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.2.3",
-    "clean-webpack-plugin": "^0.1.5",
-    "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "html-webpack-plugin": "^1.7.0",
-    "ng-annotate-loader": "0.0.10",
-    "node-sass": "^3.4.2",
-    "postcss-loader": "^0.8.0",
+    "autoprefixer": "^6.7.5",
+    "clean-webpack-plugin": "^0.1.15",
+    "css-loader": "^0.26.2",
+    "extract-text-webpack-plugin": "^2.0.0",
+    "html-webpack-plugin": "^2.28.0",
+    "ng-annotate-loader": "^0.2.0",
+    "node-sass": "^4.5.0",
+    "postcss-loader": "^1.3.2",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^3.1.2",
-    "style-loader": "^0.13.0",
-    "ts-loader": "^0.7.2",
-    "tslint": "^3.2.1",
-    "tslint-loader": "^2.1.0",
-    "typescript": "^1.7.3",
-    "webpack": "^1.9.11",
-    "webpack-dev-server": "^1.9.0"
+    "sass-loader": "^6.0.2",
+    "style-loader": "^0.13.2",
+    "ts-loader": "^2.0.1",
+    "tslint": "^4.4.2",
+    "tslint-loader": "^3.4.2",
+    "typescript": "^2.2.1",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   }
 }
