--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
+    "module": "commonjs",
     "target": "es5",
-    "sourceMap": true
-  },
-  "files": [
-    "./typings/tsd.d.ts"
-  ]
+    "noImplicitAny": false,
+    "sourceMap": true,
+    "outDir": "build",
+    "lib": ["es2015", "dom"]
+  }
 }
