--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "Starter kit for building an Angular 1.x app using Typescript with webpack bundling",
   "scripts": {
+    "cleanAll": "rm -rf node_modules/ && rm -rf dist/",
+    "cleanDist": "rm -rf dist/",
+    "prebuild": "yarn cleanDist",
     "build": "webpack --config webpack.build.js --bail --progress",
-    "dev": "webpack-dev-server --history-api-fallback --hot --inline  --progress --display-error-details"
+    "testBuild": "cd dist && http-server",
+    "prestart": "yarn cleanDist",
+    "start": "webpack-dev-server --hot --inline  --progress --open"
   },
   "author": "Sen",
   "license": "MIT",
@@ -25,9 +30,11 @@
     "@types/angular": "^1.6.7",
     "autoprefixer": "^6.7.5",
     "clean-webpack-plugin": "^0.1.15",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.2",
     "extract-text-webpack-plugin": "^2.0.0",
     "html-webpack-plugin": "^2.28.0",
+    "http-server": "^0.9.0",
     "ng-annotate-loader": "^0.2.0",
     "node-sass": "^4.5.0",
     "postcss-loader": "^1.3.2",
@@ -38,6 +45,8 @@
     "tslint": "^4.4.2",
     "tslint-loader": "^3.4.2",
     "typescript": "^2.2.1",
+    "uglify-js": "^2.7.5",
+    "uglifyjs-webpack-plugin": "^0.2.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   }
