--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,15 @@
     "sourceMap": true,
     "outDir": "build",
     "lib": ["es2015", "dom"]
-  }
+  },
+  "files": [
+    "src/lib/app.ts"
+  ]
+  // "include": [
+  //   "src/**/*"
+  // ],
+  // "exclude": [
+  //   "node_modules",
+  //   "**/*/spec.ts"
+  // ]
 }
