--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "lib": ["es2015", "dom"]
   },
   "files": [
-    "src/lib/app.ts"
+    "src/lib/app.ts",
+    "src/lib/declarations.d.ts"
   ]
   // "include": [
   //   "src/**/*"
