--- a/package.json
+++ b/package.json
@@ -22,34 +22,33 @@
     "url": "https://github.com/thelegendofcode/AngularTypescriptWebpack/issues"
   },
   "dependencies": {
-    "angular": "^1.6.0",
-    "angular-ui-router": "next",
+    "angular": "^1.6.5",
+    "@uirouter/angularjs": "~1.0.3",
     "lodash": "^4.0.0",
-    "normalize.css": "^5.0.0"
+    "normalize.css": "^7.0.0"
   },
   "devDependencies": {
-    "@types/angular": "^1.6.7",
-    "autoprefixer": "^6.7.5",
-    "clean-webpack-plugin": "^0.1.15",
+    "@types/angular": "^1.6.28",
+    "autoprefixer": "^7.1.2",
+    "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.2",
+    "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "html-webpack-plugin": "^2.28.0",
-    "http-server": "^0.9.0",
-    "ng-annotate-loader": "^0.2.0",
-    "node-sass": "^4.5.0",
-    "postcss-loader": "^1.3.2",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^2.30.1",
+    "http-server": "^0.10.0",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^6.0.2",
-    "style-loader": "^0.13.2",
-    "ts-loader": "^2.0.1",
-    "tslint": "^4.4.2",
-    "tslint-loader": "^3.4.2",
-    "typescript": "^2.2.1",
-    "uglify-js": "^2.7.5",
-    "uglifyjs-webpack-plugin": "^0.2.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "ts-loader": "^2.3.2",
+    "tslint": "^5.5.0",
+    "tslint-loader": "^3.5.3",
+    "typescript": "^2.4.2",
+    "uglify-js": "^3.0.27",
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1"
   }
 }
