--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "cleanAll": "rm -rf node_modules/ && yarn run cleanDist",
     "cleanDist": "rm -rf dist/*",
     "setupGhPages": "git clone https://github.com/thelegendofcode/AngularTypescriptWebpack.git -b gh-pages dist",
+
     "prebuild": "yarn run cleanDist",
     "build": "webpack --config webpack.build.js --bail",
     "testBuild": "cd dist && http-server & open http://localhost:8080",
+
     "prestart": "yarn run cleanDist",
-    "start": "webpack-dev-server --hot --inline  --progress --open"
+    "start": "webpack-dev-server --hot --inline  --progress --open",
+
+    "test": "karma start karma.conf.js"
   },
   "author": "Sen",
   "license": "MIT",
@@ -37,6 +41,10 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
     "http-server": "^0.10.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.5.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "raw-loader": "^0.5.1",
