--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
   },
   "devDependencies": {
     "@types/angular": "^1.6.28",
+    "@types/chai": "^4.0.4",
+    "@types/mocha": "^2.2.43",
     "angular-mocks": "^1.6.6",
     "autoprefixer": "^7.1.2",
+    "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
@@ -41,9 +44,13 @@
     "http-server": "^0.10.0",
     "jasmine-core": "^2.7.0",
     "karma": "^1.7.0",
+    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-typescript": "^3.0.7",
     "karma-webpack": "^2.0.4",
+    "mocha": "^3.5.3",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "raw-loader": "^0.5.1",
