--- a/package.json
+++ b/package.json
@@ -23,21 +23,21 @@
     "url": "https://github.com/thelegendofcode/AngularTypescriptWebpack/issues"
   },
   "dependencies": {
-    "@uirouter/angularjs": "^1.0.3",
-    "angular": "^1.6.5",
+    "@uirouter/angularjs": "~1.0.6",
+    "angular": "^1.6.6",
     "lodash": "^4.0.0",
     "normalize.css": "^7.0.0"
   },
   "devDependencies": {
-    "@types/angular": "^1.6.28",
+    "@types/angular": "^1.6.32",
     "@types/chai": "^4.0.4",
     "@types/mocha": "^2.2.43",
     "angular-mocks": "^1.6.6",
-    "autoprefixer": "^7.1.2",
+    "autoprefixer": "^7.1.4",
     "chai": "^4.1.2",
-    "clean-webpack-plugin": "^0.1.16",
+    "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.4",
+    "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
@@ -56,13 +56,13 @@
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "ts-loader": "^2.3.2",
-    "tslint": "^5.5.0",
+    "ts-loader": "^2.3.7",
+    "tslint": "^5.7.0",
     "tslint-loader": "^3.5.3",
-    "typescript": "^2.4.2",
-    "uglify-js": "^3.0.27",
+    "typescript": "^2.5.3",
+    "uglify-js": "^3.1.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.6.1"
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
   }
 }
