--- a/package.json
+++ b/package.json
@@ -23,20 +23,20 @@
     "url": "https://github.com/thelegendofcode/AngularTypescriptWebpack/issues"
   },
   "dependencies": {
-    "@uirouter/angularjs": "~1.0.7",
+    "@uirouter/angularjs": "~1.0.10",
     "angular": "^1.6.6",
     "lodash": "^4.0.0",
     "normalize.css": "^7.0.0"
   },
   "devDependencies": {
-    "@types/angular": "^1.6.32",
+    "@types/angular": "^1.6.34",
     "@types/chai": "^4.0.4",
     "@types/mocha": "^2.2.43",
     "angular-mocks": "^1.6.6",
-    "autoprefixer": "^7.1.4",
+    "autoprefixer": "^7.1.5",
     "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.17",
-    "copy-webpack-plugin": "^4.1.0",
+    "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "extract-text-webpack-plugin": "^3.0.1",
@@ -48,21 +48,21 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-mocha": "^1.3.0",
-    "karma-typescript": "^3.0.7",
-    "karma-webpack": "^2.0.4",
-    "mocha": "^4.0.0",
+    "karma-typescript": "^3.0.8",
+    "karma-webpack": "^2.0.5",
+    "mocha": "^4.0.1",
     "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.6",
+    "postcss-loader": "^2.0.8",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
-    "ts-loader": "^2.3.7",
-    "tslint": "^5.7.0",
+    "ts-loader": "^3.0.5",
+    "tslint": "^5.8.0",
     "tslint-loader": "^3.5.3",
     "typescript": "^2.5.3",
-    "uglify-js": "^3.1.3",
-    "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "uglify-js": "^3.1.4",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3"
   }
 }
