--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mocha": "^4.0.1",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.8",
+    "protractor": "^5.2.0",
     "puppeteer": "^0.12.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.6",
