--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "ts-loader": "^3.0.5",
+    "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
     "tslint-loader": "^3.5.3",
     "typescript": "^2.5.3",
